# speechnoodle

./: .env.example  .gitignore  .pre-commit-config.yaml  .truffleignore  README.md  TODO.md  flake.nix  pyproject.toml
examples/: 1_add_custom_step.ipynb
speechnoodle/: cli.py  speechnoodle.py
speechnoodle/processors/: audio_processor.py  dataset_creator.py  dataset_enricher.py  dataset_filter.py  dataset_splitter.py
speechnoodle/processors/enrichment_functions/: original-pitch.py  original-rate.py  original-snr_and_reverb.py  original-squim.py  phonemes.py  speech_duration.py  squim.py
speechnoodle/tools/: constants.py  denoiser.py  filter_parquet.py  normalize_folder.py  read_parquet.sh
tests/: test_audio_processor.py
